--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
-appdirs==1.4.0
-astroid==1.4.9
-certifi==2017.1.23
-filelock==2.0.7
-httplib2==0.9.2
-ipaddress==1.0.18
-isort==4.2.5
-kubernetes==1.0.0b1
-lazy-object-proxy==1.2.2
+appdirs==1.4.4
+astroid==2.3.0
+certifi==2022.9.24
+filelock==3.8.0
+httplib2==0.21.0
+ipaddress==1.0.23
+isort==4.3.21
+kubernetes==21.7.0
+lazy-object-proxy==1.8.0
 mccabe==0.6.1
 nose==1.3.7
-oauth2client==4.0.0
-packaging==16.8
-pep8==1.7.0
-pyasn1==0.1.9
-pyasn1-modules==0.0.8
-pylint==1.6.5
-pyparsing==2.1.10
-python-dateutil==2.6.0
-python-hosts==0.3.9
-PyYAML==3.12
-rsa==3.4.2
-six==1.10.0
-urllib3==1.20
+oauth2client==4.1.3
+oauthlib==3.2.2
+pep8==1.7.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pylint==2.4.4
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-hosts==1.0.3
+PyYAML==6.0
+rsa==4.9
+six==1.16.0
+urllib3==1.26.13
 wrapt==1.10.8
